# EnviaNotes

./: .gitignore  .~lock.DocumentacioTecnicav02.odt#  DocumentacioTecnicav01.odt  DocumentacioTecnicav02.odt  EnviaNotes.cpp  EnviaNotes.pro  MacroCalc.txt  envGenerador.cpp  envGenerador.h  envModel.h  msgPers.h  sendemail.cpp  sendemail.h  sendemail.ui  sendemail.ui.autosave  smtp_params.h
GeneraEnviament/: GeneraEnviament.pro  dades.csv  envModel.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.txt  msgDades.cpp  msgDades.h  sortida5  sortida7
GeneraEnviament/build-GeneraEnviament-Desktop_Qt_6_5_2_GCC_64bit-Debug/: GeneraEnviament
GeneraEnviament/build-GeneraEnviament-Desktop_Qt_6_5_2_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
GeneraEnviament/build-GeneraEnviament-Desktop_Qt_6_5_2_GCC_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QApplication.6DB22609909CA2CB.idx  QFile.7A81A11A6A79FE01.idx  QFileDialog.C4C87673900F88ED.idx  QList.4D7909FF6B959D3A.idx  QMainWindow.FC11BE5CA73B5F61.idx  QMap.266AF3D890F98E79.idx  QMenuBar.6F55104FD78DCEFD.idx  QMessageBox.1D0BA4C382B6CEFE.idx  QPushButton.5F4F072DF63836EC.idx  QRegularExpression.51F4A400F8D3F75B.idx  QStatusBar.AD65CFA66B03D3AA.idx  QString.C3AA1E80E05DE551.idx  QStringList.82F9A6AA8B76EF4B.idx  QTextStream.5C4D8D5027003485.idx  QVariant.D3391E2969B8F144.idx  QWidget.E5AE470E7A41BAC8.idx  __stdarg___gnuc_va_list.h.9E7F3AF8EFDC259E.idx  __stdarg___va_copy.h.6FA375399275110C.idx  __stdarg_va_arg.h.483A7FAF92EB6064.idx  __stdarg_va_copy.h.7D45B4A4BCAFBDAA.idx  (+216 more)
SmtpClient/: CMakeLists.txt
